<resources>
    <string name="app_name">plato</string>
    <string name="log_in">Log in</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="confirm_password">confirm password</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings">Settings</string>
    <string name="closeDrawer">closeDrawer</string>
    <string name="openDrawer">openDrawer</string>
    <string name="about_us">About us</string>
    <string name="log_out">log out</string>
    <string name="type_message_here">type message here...</string>
    <string name="room_name">Room name:</string>
    <string name="create">create</string>
    <string name="validate">validate</string>
    <string name="wrong">wrong</string>

    <string name="your_ranking_live">YOUR RANKING(Live)</string>
    <string name="about_us_tit">About Us</string>
    <string name="profile">Profile</string>
    <string name="edit_profile">Edit Profile</string>

    <string name="room_capacity">Room capacity</string>

</resources>
