<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".setting.SettingActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_settingActivity"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_marginRight="16dp"
                android:text="@string/settings"
                android:textColor="@android:color/holo_blue_dark"
                android:textSize="22sp" />
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:orientation="vertical"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <Button
            android:id="@+id/btn_settingActivity_logout"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/white"
            android:clickable="true"
            android:paddingStart="24dp"
            android:text="@string/log_out"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:focusable="true" />



        <Button
            android:id="@+id/btn_settingActivity_aboutus"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="2dp"
            android:background="@color/white"
            android:clickable="true"
            android:paddingStart="24dp"
            android:text="@string/about_us"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:focusable="true" />
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>