<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/entry_page_background"
    tools:context=".entry.RegisterPageActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        >


        <TextView
            android:id="@+id/tv_registerPage_registerTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:paddingLeft="32dp"
            android:paddingRight="32dp"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:background="@drawable/boarder_txt_in_entry"
            android:layout_centerHorizontal="true"
            android:textSize="28sp"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_registerPage_registerTxt"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:background="@color/white"
            android:padding="8dp">

            <EditText
                android:id="@+id/et_registerPage_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:background="@drawable/edit_text_border"
                android:hint="@string/username"
                android:padding="8dp" />

            <TextView
                android:id="@+id/tv_registerPage_usernameWarning"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/et_registerPage_username"
                android:layout_marginStart="16dp"
                android:textColor="@color/red"
                android:visibility="invisible"
                tools:text="username warning..." />


            <EditText
                android:id="@+id/et_registerPage_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_registerPage_usernameWarning"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/edit_text_border"
                android:hint="@string/password"
                android:padding="8dp"
                android:password="true" />

            <TextView
                android:id="@+id/tv_registerPage_passwordWarning"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/et_registerPage_password"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:textColor="@color/red"
                android:visibility="invisible"
                tools:text="password warning..." />

            <EditText
                android:id="@+id/et_registerPage_passwordConfirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_registerPage_passwordWarning"
                android:layout_margin="16dp"
                android:background="@drawable/edit_text_border"
                android:hint="@string/confirm_password"
                android:padding="8dp"
                android:password="true" />


            <TextView
                android:id="@+id/tv_registerPage_passwordConfWarning"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/et_registerPage_passwordConfirm"
                android:layout_marginStart="16dp"
                android:textColor="@color/red"
                android:visibility="invisible"
                tools:text="password warning..." />


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_registerPage_passwordConfWarning"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="32dp"
                android:orientation="horizontal">


                <androidx.cardview.widget.CardView
                    android:id="@+id/cv_registerPageActivity_cardviewImg"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:elevation="3dp"
                    app:cardCornerRadius="60dp">

                    <ImageButton
                        android:id="@+id/ib_registerPageActivity_profileImg"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:background="@drawable/ic_person_75dp"
                        android:scaleType="centerCrop"
                        />

                </androidx.cardview.widget.CardView>

                <Button
                    android:id="@+id/btn_registerPage_register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="20dp"
                    android:background="@drawable/btn_background"
                    android:padding="8dp"
                    android:text="@string/register"
                    android:textColor="@android:color/white" />

            </LinearLayout>

        </RelativeLayout>
    </RelativeLayout>
</ScrollView>